# bazel-tfr

./: .gitignore
modules/glfw/: metadata.json
modules/glfw/3.4.0.tfr.1/: MODULE.bazel  source.json
modules/glfw/3.4.0.tfr.1/patches/: glfw3.patch
modules/gtsam/: metadata.json
modules/gtsam/dev-5125844d.tfr.0/: MODULE.bazel  source.json
modules/gtsam/dev-5125844d.tfr.0/patches/: gtsam.patch
modules/gtsam/module_helpers/: extract_test_binaries.py  replace_bracket_includes_to_quote.py
modules/hedron_compile_commands/: metadata.json
modules/hedron_compile_commands/1.0.0/: MODULE.bazel  source.json
modules/hedron_compile_commands/1.0.0.tfr.1/: MODULE.bazel
modules/hedron_compile_commands/1.0.0/patches/: hedron_no_source_fix.patch
modules/imgui/: metadata.json
modules/imgui/1.91.7.tfr.1/: MODULE.bazel  source.json
modules/imgui/1.91.7.tfr.1/patches/: imgui.patch
modules/implot/: metadata.json
modules/implot/0.16.tfr.1/: MODULE.bazel  source.json
modules/implot/0.16.tfr.1/patches/: implot.patches
modules/ouster_sdk/: metadata.json
modules/ouster_sdk/0.13.1/: MODULE.bazel
modules/ouster_sdk/0.13.1.tfr.1/: MODULE.bazel  source.json
modules/ouster_sdk/0.13.1.tfr.1/patches/: ouster_build.patch  ouster_test.patch
modules/ouster_sdk/0.13.1/patches/: ouster_build.patch
modules/rules_ros/: metadata.json
modules/rules_ros/1.0.0.tfr.1/: MODULE.bazel  source.json
modules/small_gicp/: metadata.json
modules/small_gicp/1.0.0-dev.tfr.1/: MODULE.bazel  source.json
tools/: comp_sha_for_folder.py  fix_patch.py
(+1 files in other folders)
