
module(
    name = "gtsam",
    version = "dev-5125844d.tfr.0",
    bazel_compatibility = [">=7.2.1"],
    compatibility_level = 0
)

bazel_dep(name = "eigen", version = "3.4.0")

bazel_dep(name = "boost.serialization", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.system", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.filesystem", version = "1.83.0.bcr.1")

# :tbb and :tbbmalloc
bazel_dep(name = "onetbb", version = "2022.0.0")


# for examples
bazel_dep(name = "boost.program_options", version = "1.83.0.bcr.1")

bazel_dep(name = "hedron_compile_commands", version = "1.0.0.tfr.1", dev_dependency = True)
